<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracks_progress"
            android:icon="@drawable/foot_steps"
            android:title="@string/menu_tracks_progress" />
        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/map"
            android:title="@string/menu_tracks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/trophy"
            android:title="@string/achievements" />
    </group>
</menu>