<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tracks_progress">

    <fragment
        android:id="@+id/nav_tracks_progress"
        android:name="de.hd.fitbittracks.ui.tracksprogress.TracksProgressFragment"
        android:label="@string/menu_tracks_progress"
        tools:layout="@layout/fragment_tracks_progress">
        <argument
            android:name="milestone_id"
            app:argType="long"
            android:defaultValue="-1L"/>
        <argument
            android:name="progress_id"
            app:argType="long"
            android:defaultValue="-1L"/>
    </fragment>

    <fragment
        android:id="@+id/nav_tracks"
        android:name="de.hd.fitbittracks.ui.tracks.TracksFragment"
        android:label="@string/menu_tracks"
        tools:layout="@layout/fragment_tracks" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="de.hd.fitbittracks.ui.settings.UserSettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_milestone"
        android:name="de.hd.fitbittracks.ui.milestones.MilestoneFragment"
        android:label="@string/milestone"
        tools:layout="@layout/milestone">
        <argument
            android:name="milestone_id"
            app:argType="long" />
    </fragment>
</navigation>