<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="start">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/notification_text_color"
        android:textSize="20sp"
        tools:text="Berlin"/>

    <TextView
        android:id="@+id/success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/notification_text_color"
        android:textSize="14sp"
        android:text="@string/milestone_reached"/>

    <ImageView
        android:id="@+id/milestone_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/milestone_image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/berlin"
        android:layout_marginBottom="@dimen/image_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/action_milestone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/notification_button_left"
            android:paddingVertical="10dp"
            android:text="@string/view_milestone"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/action_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/notification_button_right"
            android:paddingVertical="10dp"
            android:text="@string/view_progress"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif" />

    </LinearLayout>

</LinearLayout>