<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/track_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            tools:src="@drawable/berlin"
            android:contentDescription="@string/track_image"
            android:scaleType="centerCrop" />

        <!-- Text Content -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_completed"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/notification_text_color" />

            <TextView
                android:id="@+id/track_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Berlin"
                android:textColor="@color/notification_text_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/start_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/notification_text_color"
                    android:contentDescription="@string/home_icon"
                    android:src="@drawable/home" />
                <TextView
                    android:id="@+id/start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Start: Berlin"
                    android:textColor="@color/notification_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/end_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/notification_text_color"
                    android:contentDescription="@string/flag_icon"
                    android:src="@drawable/flag" />
                <TextView
                    android:id="@+id/end_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="End: Munich"
                    android:textColor="@color/notification_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/distance_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/notification_text_color"
                    android:contentDescription="@string/steps_icon"
                    android:src="@drawable/steps" />
                <TextView
                    android:id="@+id/distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Distance: 100 km"
                    android:textColor="@color/notification_text_color"
                    android:textSize="14sp" />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/action_track_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/notification_button_bg"
        android:paddingVertical="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/finish_track"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="sans-serif" />
</LinearLayout>
